--- a/styles/style.css
+++ b/styles/style.css
@@ -1,181 +1,180 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    color: white;
-    font-family: Arial;
-    overflow-x: hidden;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	text-decoration: none;
+	color: white;
+	font-family: Arial;
+	overflow-x: hidden;
 }
 
 .container {
-    margin: 0 auto;
-    padding: 0 15px;
-    width: 100%;
-    max-width: 1140px;
+	margin: 0 auto;
+	padding: 0 15px;
+	width: 100%;
+	max-width: 1140px;
 }
 
 .header_top {
-    background-color: black;
-    padding: 15px;
+	background-color: black;
+	padding: 15px;
 }
 
 .header_nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-wrap: nowrap;
-    gap: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	text-wrap: nowrap;
+	gap: 15px;
 }
 
 .title_and_logo {
-    font-weight: 700;
-    font-size: 40px;
+	font-weight: 700;
+	font-size: 40px;
 }
 
 .header_list {
-    display: flex;
-    align-items: center;
-    gap: 81px;
+	display: flex;
+	align-items: center;
+	gap: 81px;
 }
 
 .header_link {
-    font-weight: 400;
-    font-size: 25px;
+	font-weight: 400;
+	font-size: 25px;
 }
 
 .intro {
-    background-image: url(../images/intro.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 850px;
+	background-image: url(../images/intro.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 850px;
 }
 
 .intro_title {
-    color: #000;
-    margin-bottom: 145px;
+	color: #000;
+	margin-bottom: 145px;
 }
 
 .intro_link {
-    background-color: white;
-    color: #000;
-    border-radius: 10px;
-    padding: 10px 24px;
-    font-weight: 700;
-    font-size: 35px;
+	background-color: white;
+	color: #000;
+	border-radius: 10px;
+	padding: 10px 24px;
+	font-weight: 700;
+	font-size: 35px;
 }
 
 .aboutMe {
-    background-color: #0E1C25;
-    padding: 30px 0 125px;
+	background-color: #0e1c25;
+	padding: 30px 0 125px;
 }
 
 .aboutMe_title {
-    text-align: center;
-    margin: 0 auto 40px;
+	text-align: center;
+	margin: 0 auto 40px;
 }
 
 .aboutMe_box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 10px;
 }
 .aboutMe_img {
-    width: 500px;
+	width: 500px;
 }
 .aboutMe_textbox {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    gap: 64px;
+	display: flex;
+	flex-direction: column;
+	width: 500px;
+	gap: 64px;
 }
 
 .aboutMe_minititle {
-    font-weight: 400;
-    font-size: 35px;
+	font-weight: 400;
+	font-size: 35px;
 }
 
 .aboutMe_text {
-    text-align: justify;
-    font-weight: 400;
-    font-size: 18px;
+	text-align: justify;
+	font-weight: 400;
+	font-size: 18px;
 }
 
 .myWorks {
-    background-color: #5C6B81;
-    padding: 43px 0 70px;
+	background-color: #5c6b81;
+	padding: 43px 0 70px;
 }
 
 .myWorks_title {
-    text-align: center;
-    margin-bottom: 62px;
+	text-align: center;
+	margin-bottom: 62px;
 }
 
 .myWorks_cardbox {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 30px;
-
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	gap: 30px;
 }
 
 .myWorks_card {
-    width: 312px;
-    height: 550px;
-    border-radius: 10px;
-    background-color: #B12B06;
-    padding: 15px 15px 27px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+	width: 312px;
+	height: 550px;
+	border-radius: 10px;
+	background-color: #b12b06;
+	padding: 15px 15px 27px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .myWorks_card_title {
-    text-align: center;
-    font-weight: 700;
-    font-size: 20px;
-    margin: 20px auto 0;
+	text-align: center;
+	font-weight: 700;
+	font-size: 20px;
+	margin: 20px auto 0;
 }
 
 .myWorks_card_text {
-    font-weight: 700;
-    font-size: 14px;
-    text-align: center;
-    margin: 21px auto 27px;
-    width: 264px;
+	font-weight: 700;
+	font-size: 14px;
+	text-align: center;
+	margin: 21px auto 27px;
+	width: 264px;
 }
 
 .myWorks_card_link {
-    background-color: white;
-    padding: 8px 25px 9px 24px;
-    border-radius: 10px;
-    font-weight: 700;
-    font-size: 20px;
-    color: #000;
-    text-align: center;
+	background-color: white;
+	padding: 8px 25px 9px 24px;
+	border-radius: 10px;
+	font-weight: 700;
+	font-size: 20px;
+	color: #000;
+	text-align: center;
 }
 
 .footer {
-    background-color: black;
-    padding: 47px 0 62px;
+	background-color: black;
+	padding: 47px 0 62px;
 }
 
 .footer_title {
-    text-align: center;
-    font-weight: 400;
-    font-size: 40px;
-    margin-bottom: 36px;
+	text-align: center;
+	font-weight: 400;
+	font-size: 40px;
+	margin-bottom: 36px;
 }
 .footer_nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
